feat: implement sorting
